test_out2.txt
    Checking kinetix-language v0.0.8 (D:\Progetti\Nevhar\Kinetix\crates\language)
error[E0061]: this method takes 2 arguments but 1 argument was supplied
   --> crates\language\src\parser\mod.rs:186:37
    |
186 |                     let expr = self.parse_expression(Precedence::Lowest)?;
    |                                     ^^^^^^^^^^^^^^^^-------------------- argument #2 of type `bool` is missing
    |
note: method defined here
   --> crates\language\src\parser\mod.rs:796:8
    |
796 |     fn parse_expression(&mut self, precedence: Precedence, allow_holy: bool) -> Option<Expression<'arena>> {
    |        ^^^^^^^^^^^^^^^^                                    ----------------
help: provide the argument
    |
186 |                     let expr = self.parse_expression(Precedence::Lowest, /* bool */)?;
    |                                                                        ++++++++++++

error[E0061]: this method takes 2 arguments but 1 argument was supplied
   --> crates\language\src\parser\mod.rs:241:37
    |
241 |                     let expr = self.parse_expression(Precedence::Lowest)?;
    |                                     ^^^^^^^^^^^^^^^^-------------------- argument #2 of type `bool` is missing
    |
note: method defined here
   --> crates\language\src\parser\mod.rs:796:8
    |
796 |     fn parse_expression(&mut self, precedence: Precedence, allow_holy: bool) -> Option<Expression<'arena>> {
    |        ^^^^^^^^^^^^^^^^                                    ----------------
help: provide the argument
    |
241 |                     let expr = self.parse_expression(Precedence::Lowest, /* bool */)?;
    |                                                                        ++++++++++++

For more information about this error, try `rustc --explain E0061`.
error: could not compile `kinetix-language` (lib) due to 2 previous errors
